--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,14 @@
 .App {
   text-align: center;
+  background: white url('./assets/Head.png') no-repeat fixed bottom center;
+  background-size: 100vmin ;
+  display:flex;
+  flex-direction: column;
+  min-height: 100vh;
+
+}
+.section {
+  height: 100vh;
 }
 
 .App-logo {
@@ -7,15 +16,17 @@
   height: 40vmin;
 }
 
+.Win {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .App-link {
