--- a/src/App.css
+++ b/src/App.css
@@ -7,37 +7,39 @@
   min-height: 100vh;
 
 }
-.section {
+
+.panel {
   height: 100vh;
+  width: 100vw;
+  text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+.panel span {
+  position:relative;
+  display: block;
+  overflow: visible;
+  top: 30%;
+  
 }
 
-.Win {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}
-.App-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.panel.blue {
+  background-color: transparent;
+  font-size: 80px;
 }
 
-.App-link {
-  color: #61dafb;
+.panel.turqoise {
+  background-color: transparent;
+  font-size: 50px;
+  line-height: 1.5em;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.panel.green {
+  background-color: transparent;
+
+}
+
+.panel.bordeaux {
+  background-color: transparent;
+
 }
