--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,18 @@
 .App {
   text-align: center;
-  min-height: 100vh;
+  position:absolute;
+  height: 100vh;
   background-color:'transparent';
+  background: white url('./assets/Head.png') no-repeat fixed center 100%;
+  background-size: 100vmin ;
+
 }
 
+.HeadImg{
+  height:100vh;
+  
 
+}
 .panel {
   height: 100vh;
   width: 100vw;
@@ -20,19 +28,17 @@
 }
 
 .panel.blue {
-  background-color: transparent;
+  background-color: blue;
   font-size: 80px;
-  background: white url('./assets/Head.png') no-repeat fixed center 100%;
-  background-size: 100vmin ;
+  
 }
 
 .panel.turqoise {
   background-color: transparent;
   font-size: 50px;
   line-height: 1.5em;
-  background: white url('./assets/Head.png') no-repeat fixed center 100%;
+  background: white url('./assets/Head.png') no-repeat fixed center bottom;
   background-size: 100vmin ;
-
 }
 
 .panel.green {
