--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,19 @@
-.App {
+.App:before {
   text-align: center;
-  height: 100vh;
+  min-height: 100vh;
   background-color:'transparent';
-
-
+  content: "";
+  display: block;
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -10;
+  background: url('./assets/Head.png') no-repeat center bottom;
+  background-size: 100vmin ;
 }
+
 
 .HeadImg{
   height:100vh;
@@ -15,8 +24,8 @@
   height: 100vh;
   width: 100vw;
   overflow: hidden;
-  background: white url('./assets/Head.png') no-repeat fixed center 100%;
-  background-size: 100vmin ;
+ /** background: white url('./assets/Head.png') no-repeat fixed center 100%;
+  background-size: 100vmin ;*/
 }
 #pinContainer .panel {
   height: 100vh;
