--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+@import url('https://fonts.googleapis.com/css?family=Lato:100,300');
 
 .App:before {
   text-align: center;
@@ -27,7 +27,7 @@
   top: 50%;
   font-size: 80px;
   font-family: 'Lato', sans-serif;
-  font-weight: 300;
+  font-weight: 100;
   
   
 }
