--- a/src/App.css
+++ b/src/App.css
@@ -42,17 +42,50 @@
 .panel.turqoise {
   background-color: transparent;
   margin-top:30vh;
-  font-size: 15vmin;
+  font-size: 10vmin;
 
 }
 
 .panel.green {
   background-color: transparent;
-  margin-top:30vh;
-  font-size: 12vmin;
+  margin-top:5vh;
 }
 
 .panel.bordeaux {
   background-color: transparent;
 }
 
+
+.stagger {
+  width: 50px;
+  height: 50px;
+  left: 700px;
+  background-color: green;
+  position: relative;
+}
+
+.card {
+  max-width: 345px;
+  min-width: 300px;
+}
+
+.media {
+  height: 140px;
+}
+
+.bavatar {
+  align-self: center;
+  margin-top: 10px;
+  width: 120px;
+  height: 120px;
+  border-radius:60px;
+}
+
+
+.icons{
+  display:flex;
+  align-content: flex-end;
+  justify-content: flex-end;
+  
+  
+}
