--- a/src/Folio.css
+++ b/src/Folio.css
@@ -1,18 +1,18 @@
 
 
 
-.card {
-  max-width: 320px;
-  min-width: 300px;
+.cardfolio {
+  max-width: 110px;
+  height: 200px;
 }
 
 .media {
-  height: 140px;
+  height: auto;
 }
 
 
 
-.skillicons{  
+.skillicons{
   text-align: left;
  font-size:20px;
  height:20px;
